metadata/force-app/main/default/objects/CustomName_VdpEe__c/CustomName_VdpEe__c.object-meta.xml
<CustomObject>
    <description>Description_oxCSM</description>
    <label>CustomLabel_agQrJ</label>
    <nameField>
        <label>CustomLabel_agQrJ</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_agQrJs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>