metadata/force-app/main/default/objects/CustomName_VdpEe__c/fields/CustomField_CqzKm__c.field-meta.xml
<CustomField>
    <fullName>CustomField_CqzKm__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldatEqc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>