metadata/force-app/main/default/objects/CustomName_VdpEe__c/fields/CustomField_fzfMB__c.field-meta.xml
<CustomField>
    <fullName>CustomField_fzfMB__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldtFQCy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>